Fixed overflow issues

--- a/src/scss/components/_app-header.scss
+++ b/src/scss/components/_app-header.scss
@@ -8,4 +8,7 @@
     // Sticky
     position: sticky;
     top: 0;
+
+    // Dimensions
+    width: 100%;
 }
