--- a/src/scss/components/_hero-text.scss
+++ b/src/scss/components/_hero-text.scss
@@ -2,6 +2,7 @@
     // Take up as much space as possible in parent flex container
     flex: 1;
     width: 100%;
+    box-sizing: border-box;
 
     // For layout inside
     display: flex;
